--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,8 @@
 body {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Avenir, serif;
     font-size: medium;
     margin: 10;
     padding: 0;
     background-color: white;
-}
-
-h1 {
-    color: black;
-}
-h2 {
-    color : black;
+    text-align: center;
 }
